--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
           <div class="header__content">            
             <nav class="navbar">
-              <a href="#"><img class="header__logo" src="img/LOGONASHI.png"></a>
+              <a href="#"><img class="header__logo" src="img/LOGONASHI.svg"></a>
               <a class="navbar__item" href="#">Услуги</a>
               <a class="navbar__item" href="#">Гарантии</a>
               <a class="navbar__item" href="#">Отзывы</a>
