--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             </nav>
             
             <a href="#" class="login__btn">Регистрация</a>
+            
+            <a href="#" class="burger"><img src="img/burgerXD.svg" alt=""></a>
 
           </div>
         </div>
