--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   
-  <section class="main">
+  <section id="main" class="main">
 
       <header class="header">
         <div class="container">
@@ -24,10 +24,17 @@
               <a class="navbar__item" href="#">Отзывы</a>
               <a class="navbar__item" href="#">О наших</a>
             </nav>
-            
+
+            <nav id="navbar" class="navbar__burger">
+              <a class="navbar__item__burger" href="#">Услуги</a>
+              <a class="navbar__item__burger" href="#">Гарантии</a>
+              <a class="navbar__item__burger" href="#">Отзывы</a>
+              <a class="navbar__item__burger" href="#">О наших</a>
+              <a class="navbar__item__burger" href="#">Регистрация</a>
+            </nav>
             <a href="#" class="login__btn">Регистрация</a>
             
-            <a href="#" class="burger"><img src="img/burgerXD.svg" alt=""></a>
+            <a href="#" id="burger" class="burger"><img src="img/burgerXD.svg" alt=""></a>
 
           </div>
         </div>
@@ -66,6 +73,7 @@
       </div>
     </div>
   </section>
+<script src="js/main.js"></script>
 
 
 
